<resources>
    <string name="app_name">File Chest</string>
    <string name="title_activity_main">My Chest</string>

    <string name="title_section1">My Chest</string>
    <string name="title_section2">Clear Cache</string>
    <string name="title_section3">Links</string>
    <string name="title_section5">Gallery</string>
    <string name="title_section4">Log Out</string>
    <string name="title_section6">Resync</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_register">Register</string>
    <string name="repeat_password">Repeat Password</string>

    <string name="action_settings">About</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="GetDownloadLink">Get Download Link</string>
    <string name="CopyLink">Copy Link</string>
    <string name="title_activity_links">Links</string>
    <string name="DownloadFile">Download File</string>

    <string name="action_search">Search</string>
    <string name="title_activity_test">About</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
